--- a/app/src/main/res/layout/activity_audio.xml
+++ b/app/src/main/res/layout/activity_audio.xml
@@ -37,7 +37,7 @@
         android:layout_height="71dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:text="STOP"
+        android:text="@string/stop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
@@ -48,7 +48,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:text="PLAY"
+        android:text="@string/play"
         app:layout_constraintEnd_toStartOf="@+id/buttonPause"
         app:layout_constraintStart_toEndOf="@+id/buttonStop"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
@@ -59,7 +59,7 @@
         android:layout_height="71dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:text="PAUSE"
+        android:text="@string/pause"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 </android.support.constraint.ConstraintLayout>
